# skills

./: .gitignore  EXTERNAL-SKILLS.md  README.md
.claude-plugin/: marketplace.json
skills/claude-vault-capture/: .gitignore  README.md  pyproject.toml
skills/claude-vault-capture/.claude-plugin/: plugin.json
skills/claude-vault-capture/eval/fixtures/: adr-worthy.txt  debugging-only.txt  malformed-title.txt  mixed.txt  mock-responses.json  runbook-worthy.txt  with-secrets.txt
skills/claude-vault-capture/eval/fixtures/transcripts/: adr-worthy.jsonl  debugging-only.jsonl  malformed-title.jsonl  malformed_haiku.jsonl  with-secrets.jsonl
skills/claude-vault-capture/hooks/: curate.py  hooks.json  scrub.py  scrub_rules.py  session-end-capture.sh
skills/claude-vault-capture/prompts/: curation-system-prompt.md
skills/claude-vault-capture/skills/vault-save/: SKILL.md
skills/claude-vault-capture/tests/: conftest.py  test_append_log.py  test_dedup.py  test_excluded_commands.py  test_failure_isolation.py  test_frontmatter.py  test_guards.py  test_live_e2e.py  test_load_transcript.py  test_log_schema.py  test_pipeline_e2e.py  test_retry_on_null.py  test_scrub.py  test_session_end_hook.py  test_strip_fences.py  test_threshold.py  test_timeout.py
skills/cng-conversions/: SKILL.md
skills/cng-geojson-to-geoparquet/: SKILL.md
skills/cng-geotiff-to-cog/: SKILL.md
skills/cng-netcdf-to-cog/: SKILL.md
skills/cng-shapefile-to-geoparquet/: SKILL.md
skills/devseed-poster/: SKILL.md
skills/figma-sync/: SKILL.md
skills/geojson-to-geoparquet/: SKILL.md  requirements.txt
(+43 files in other folders)
